<resources>
    <string name="app_name">MyAffirmPlay</string>
    <string name="select_language">Select Language</string>
    <string name="language_fr">French</string>
    <string name="language_eng">English</string>
    <string name="language_esp">Spanish</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="menu">Menu</string>
    <string name="titletavoix">Enregistre tes \n Affirmations</string>
    <string name="exo_controls_play_pause_description">Lecture / Pause</string>
    <string name="advices_text">
        <![CDATA[
        <b>1/ Formule au présent </b> comme si c’était déjà une réalité. "Je suis confiant." <br/>
        <b>2/ Sois positif </b> en te concentrant sur ce que tu veux, pas sur ce que tu veux éviter. <br/>
        <b>3/ Choisis des mots riches de sens </b> pour toi. <br/>
        <b>4/ Sois clair. </b> <br/>
        <b>5/ Renforce tes affirmations avec des exemples concrets </b> de ta vie qui les confirment : "Je suis organisé parce que je planifie mes journées et termine mes projets à temps."
        ]]>
    </string>
    <string name="subtitle_text"><i> «Moi, [ton Prénom], je...»</i></string>
    <string name="txt_explainhdiw">
        Imagine qu"'"à ta naissance, ton <b>cerveau</b> est comme une <b>jungle</b> dense. Avancer dans cette jungle est difficile. Lorsque tu as une <b>pensée pour la première fois</b>, c"'"est comme <b>ouvrir un nouveau sentier</b> dans cette jungle. Plus tu as cette pensée, plus il devient facile de passer par ce sentier, et plus il devient facile de passer par ce sentier, plus tu as cette pensée. Peu à peu, <b>ce sentier devient</b> un chemin, puis une route, et finalement <b>une autoroute</b>.
    </string>
    <string name="txt_explainhdiw2">
        <b> Changer ton système de croyances</b>, c"'"est comme <b>tracer un nouveau sentier dans la jungle</b>. Ton cerveau, par souci d"'"économie d"'"énergie, préfère utiliser l"'"autoroute neuronale qu"'"il a patiemment créée. Cela demande donc un <b>effort conscient</b> pour créer ce nouveau chemin.
    </string>
    <string name="txt_explainhdiw3">
          Si tu connais la destination d"'"une ancienne autoroute et qu"'"elle ne te convient plus (<b>une croyance limitante que tu as identifiée</b>), il est temps de te détourner de cette autoroute en empruntant encore et encore le nouveau sentier que tu as choisi (<b>affirmation positive</b>). Ce sentier finira par devenir, lui aussi, une belle autoroute, tandis que l"'"ancienne, n"'"étant plus utilisée, disparaîtra sous la végétation, permettant ainsi l"'"émergence d"'"un <b>nouveau sentiment d"'"identité</b> et d"'"une perception renouvelée de toi-même.
      </string>
    <string name="infoenregistrement">
            L’enregistrement doit durer entre 2 et 10 secondes
    </string>
    <string name="diamant">
        💎 Actuellement gratuit → bientôt Premium
    </string>
    <string name="txt_explainadive">
        <b>Écoute tes affirmations pendant 21 jours</b>, autant que possible, au moins une fois par jour. <b>Répète-les à voix haute lors des moments de silence</b>, avec la <b>conviction</b> qu’elles sont déjà vraies. Ressens avec <b>gratitude</b> que tu es déjà en train de <b>devenir la personne que tu souhaites être</b>.
    </string>
    <string name="txt_explainadive2">
        Pour mieux les ancrer dans ton système nerveux, <b>implique ton corps</b> : bouge, contracte tes muscles, mets de l’énergie dans ta voix. Ce ne sont pas de simples affirmations : ce sont des déclarations puissantes. <b>Ressens</b> ce qu’elles éveillent en toi : <b>sensations</b>, <b>émotions</b>, <b>images</b>. Peu à peu, cette pratique <b>transforme tes pensées</b>, <b>tes actions</b> et donc  <b>ton expérience</b>.
    </string>
    <string name="txt_explainadive3">
        Ton cerveau ne fait pas la différence entre l’imaginaire et le réel. Imagine ton plat préféré : tu salives déjà. Imagine une scène joyeuse : tu ressens la joie. <b>La visualisation est un outil concret pour transformer ton état intérieur</b>.

    </string>
    <string name="txt_explainadive4">
       Pour aller plus loin, visualise-toi en train de vivre vraiment tes affirmations. <b>Active tes 5 sens</b> : qu’est-ce que tu vois ? qu’est-ce que tu entends ? qu’est-ce que tu ressens dans ton corps ? Plus ton image est précise, plus l’impact est fort.
    </string>
    <string name="txt_rules1">
        Choisis une \n <b>Voix Off</b>
    </string>
    <string name="txt_rules2">
        Écris tes \n <b>Affirmations</b>
    </string>
    <string name="txt_rules3">
        Choisis ta    \n <b>musique</b>\n de fond
    </string>
    <string name="txt_rules4">
        Choisis la\n <b>Durée</b> de ton\n fichier audio
    </string>
    <string name="txt_rules5">
        <b>Écoute</b> tes \n affirmations\n chaque jour
    </string>
    <string name="lien_texte">Ton avis compte ! 🎁\nen cliquant ici</string>
    <string name="btn_create_new">Créer Nouveau</string>
    <string name="btn_my_affirmations">Mes affirmations</string>
    <string name="btn_how_it_works">Le principe</string>
    <string name="btn_practical_advices">Conseils Pratiques</string>
    <string name="txt_page_acceuil">Tes Mots, Ta Transformation, Ton Histoire</string>
    <string name="btn_choose_female_voice">Voix de Femme</string>
    <string name="btn_choose_male_voice">Voix d"'"Homme</string>
    <string name="btn_choose_your_voice">Ta Voix</string>
    <string name="your_choice">Ton choix :</string>
    <string name="click_on_the_voice">clique sur la voix \n que tu veux</string>
    <string name="titlestep2">Écris tes\nAffirmations</string>
    <string name="btn_show_advices">Conseils Pratiques</string>
    <string name="add_new_affirmation">NEW</string>
    <string name="ok_button">OK</string>
    <string name="choisis_ta_musique">Choisis ta\nMusique</string>
    <string name="upload_mp3">Upload MP3</string>
    <string name="musique">Musique</string>
    <string name="silence">Silence</string>
    <string name="clic_sur_musique">clic sur la musique \n de ton choix</string>
    <string name="ton_choix">Ton choix :</string>
    <string name="voyage_interieur">8D</string>
    <string name="onde_theta">Binaural</string>
    <string name="expansion">Expansion</string>
    <string name="elevation">Élévation</string>
    <string name="volume_musique">VOLUME MUSIQUE</string>
    <string name="choisis_duree_fichier_audio">Choisis la Durée de ton Fichier Audio</string>
    <string name="intro">Intro</string>
    <string name="duree">Durée :</string>
    <string name="default_duration">00 min 00 sec</string>
    <string name="play_intro_audio">Play the introduction audio</string>
    <string name="meditation_ready">C"'"EST PRÊT !</string>
    <string name="name_your_creation">Donne un Nom à ta Création</string>
    <string name="progress_indicator_percentage">0%</string>
    <string name="progress_description">Progression de l"'"audio : 0 pour cent</string>
    <string name="mes_affirmations">MES AFFIRMATIONS</string>
    <string name="affirmation_no_data">Vous n"'"avez encore aucune Affirmation. Créez votre fichier audio personalisé en cliquant sur Créer nouveau.</string>
    <string name="create_new">Créer Nouveau</string>
    <string name="main_menu">Menu principal</string>
    <string name="download">Télécharger</string>
    <string name="rename">Renommer</string>
    <string name="delete">Supprimer</string>
    <string name="toast_enregistrement">Enregistrez au moins l"'"une des deux affirmations suggérées.</string>
    <string name="toast_max_affirmations">Vous avez atteint le maximum (%1$d)</string>
    <string name="toast_mic_permission_granted">Permission micro accordée. Maintiens le bouton pour enregistrer.</string>
    <string name="toast_mic_permission_denied">Permission micro refusée.</string>
    <string name="toast_recording_limited">Enregistrement limité à 10 secondes.</string>
    <string name="toast_recording_failed">Impossible de démarrer l’enregistrement.</string>
    <string name="toast_recording_too_short">Enregistrement trop court (&lt; 2 sec), ignoré.</string>
    <string name="toast_max_affirmations_tavoix">Maximum %1$d enregistrements.</string>
    <string name="toast_max_affirmations_reached">Vous avez atteint le nombre maximum d"'"affirmations (5).</string>
    <string name="toast_select_affirmation">Vous devez sélectionner au moins une affirmation positive.</string>
    <string name="toast_audio_save_failed">Échec de l"'"enregistrement du fichier audio.</string>
    <string name="toast_affirmation_too_long">Oups, ton affirmation est trop longue\nLimite : 90 caractères (≈ 12–15 mots)</string>
    <string name="toast_offline">Oops ! Il semble que tu sois hors ligne…</string>
    <string name="toast_duration_limit">La durée ne doit pas dépasser 23 minutes.</string>
    <string name="toast_select_valid_duration">Veuillez sélectionner une durée valide.</string>
    <string name="toast_audio_generated">Fichier audio généré pour l"'"index %1$d.</string>
    <string name="hdiw_title">COMMENT\nÇA MARCHE ?</string>
    <string name="advices_title">CONSEILS\nPRATIQUES</string>
    <string name="btn_new_advice">Mes Affirmations</string>
    <string name="visualisation">La Visualisation </string>
    <string name="linkform">https://forms.gle/RtJFDrkqoJrxEhzh6</string>
    <string name="toastMagieOpere">Patience, la magie opère...</string>
    <string name="fichier_telecharge">Retrouve ton affirmation dans ton dossier Téléchargements 🙂</string>
    <string name="erreur_mediastore">Erreur lors de l"'"insertion dans MediaStore.</string>
    <string name="renommer_fichier">Renommer ce fichier</string>
    <string name="nouveau_nom">Nouveau nom</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="supprimer_definitivement">Supprimer définitivement ce fichier ?</string>
    <string name="supprimer">Supprimer</string>
    <string name="titreEtape2Voix">Choisis la Voix\nque tu Préfères</string>
    <string name="menuItem1">Menu Principal</string>
    <string name="menuItem2">Créer Nouveau</string>
    <string name="menuItem3">Mes Affirmations</string>
    <string name="menuItem4">Conseil Pratiques</string>
    <string name="menuItem5">Comment ça Marche?</string>
    <string name="titreAdvices">CONSEILS PRATIQUES</string>
    <string name="toastSelectVoice">Sélectionner une voix</string>
    <string name="toastDisconected">Oops ! Il semble que tu sois hors ligne…</string>
    <string name="toastModifAffirm">Modifie au moins l’une des deux affirmations proposées</string>
    <string name="affirmation_present" translatable="false"><b>FORMULE AU PRÉSENT</b> comme si c’était une réalité. <i>"Je suis confiant."</i></string>
    <string name="affirmation_form" translatable="false">Écris sous la forme : <b>"Moi, [ton Prénom], je..."</b></string>
    <string name="affirmation_positive" translatable="false"><b>SOIS POSITIF</b> en te concentrant sur ce que tu veux, pas sur ce que tu veux éviter</string>
    <string name="affirmation_words" translatable="false"><b>CHOISIS TES MOTS</b> riches de sens pour toi</string>
    <string name="affirmation_resistance" translatable="false"><b>SURMONTE TES RÉSISTANCES</b> avec : <i>"Je m’ouvre à la possibilité de... ."</i></string>
    <string name="toastManagaaffirmation1">Chemin du fichier non trouvé.</string>
    <string name="toastManagaaffirmation2">Erreur lors de la suppression.</string>
    <string name="toastManagaaffirmation3">Stockage externe non disponible.</string>
    <string name="toastManagaaffirmation4">Erreur lors du renommage.</string>
    <string name="toastManagaaffirmation5">Le nom ne peut pas être vide.</string>
    <string name="cgu">CGU et Politique de Confidentialité </string>
    <string name="linkcgu">https://myaffirmplay.com/fr/cgu/</string>
</resources>