<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tavoix"
    android:background="@drawable/activity_background"
    >

    <!-- Contenu principal de l'activité -->

    <!-- Menu latéral -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:padding="16dp"
        tools:context=".Tavoix">

        <!-- Bouton Menu Burger en haut à droite -->
        <ImageButton
            android:id="@+id/btn_burger"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="@string/menu"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_3_pointssvg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Bouton de sélection de la langue en haut à gauche -->

        <!-- Titre -->
        <TextView
            android:id="@+id/titlestep2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/titletavoix"
            android:textColor="@color/grey"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Bouton pour afficher les conseils pratiques -->

        <!--android:drawableEnd="@drawable/arrowdown"-->

        <Button
            android:id="@+id/btn_show_advices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/button_background"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:maxWidth="320dp"
            android:padding="16dp"
            android:text="@string/btn_show_advices"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlestep2" />
        <!-- ScrollView contenant les affirmations -->

        <!-- Bouton pour ajouter une nouvelle affirmation -->
        <Button
            android:id="@+id/addButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:text="@string/add_new_affirmation"
            android:textSize="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Bouton OK -->
        <Button
            android:id="@+id/step2ok"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:text="@string/ok_button"
            android:textSize="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_advices"
            app:srcCompat="@drawable/svg_bouton_micro" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/svg_bouton_micro" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/svg_bouton_micro" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
