<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".Step4">

    <!-- ScrollView englobe tout le contenu -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Contenu principal -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/activity_background">

            <!-- Bouton Menu Burger en haut à gauche -->
            <ImageButton
                android:id="@+id/btn_burger"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@null"
                android:contentDescription="@string/menu"
                android:scaleType="fitCenter"
                android:src="@drawable/menu_3_pointssvg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Texte expliquant la durée -->
            <TextView
                android:id="@+id/txt_explain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/choisis_duree_fichier_audio"
                android:textSize="27sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- NumberPickers -->
            <NumberPicker
                android:id="@+id/numberPickerMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Picker"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toStartOf="@+id/numberPickerSeconds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_explain" />

            <NumberPicker
                android:id="@+id/numberPickerSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Picker"
                android:layout_marginStart="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
                app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes" />

            <!-- Labels des NumberPickers -->

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="min"
                app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
                app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
                app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes"
                app:layout_constraintVertical_bias="0.496" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sec"
                app:layout_constraintBottom_toBottomOf="@+id/numberPickerSeconds"
                app:layout_constraintStart_toEndOf="@+id/numberPickerSeconds"
                app:layout_constraintTop_toTopOf="@+id/numberPickerSeconds" />

            <!-- Switch Intro -->

            <!-- Bouton Écouter l'Intro -->
            <Switch
                android:id="@+id/intro"
                android:layout_width="110dp"
                android:layout_height="49dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                style="@style/CustomSwitchStyle"
                android:text="@string/intro"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/imageButtonStep4Listen"
                android:layout_width="49dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play_intro_audio"
                app:layout_constraintTop_toTopOf="@+id/intro"
                app:layout_constraintBottom_toBottomOf="@+id/intro"
                app:layout_constraintStart_toEndOf="@+id/intro"
                app:srcCompat="@drawable/hp_vert_fusion" />

            <!-- Description de la Durée Sélectionnée -->

            <TextView
                android:id="@+id/textViewMinutesEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/default_duration"
                android:textColor="@color/green"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPickerMinutes" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="💎 > 7 min "
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewMinutesEdit" />

            <!-- Bouton Valider -->
            <Button
                android:id="@+id/btn_Valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ok_button"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intro"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Menu de navigation latéral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
